# image_segmentation

./: .gitignore  .pre-commit-config.yaml  FINAL_NOTEBOOK.ipynb  README.md  mypy.ini  pyproject.toml  train.sh
HPC/: run_jobs_locally.py
HPC/jobs/: gpu.job  setup.job
src/: CamVidData.py  DataClass_intro.ipynb  Data_class_beba.ipynb  Results.ipynb  TransformImages.ipynb  Untitled-1.ipynb  _types.py  bence.py  combine_arrays.py  dataloader.py  deeplabv3.ipynb  evaluation.py  image_segmentation.ipynb  image_segmentation_beba.ipynb  image_segmentation_max.ipynb  main.py  max.py  model.py  model_deeplabv3.py  segmentationData.py  segmentationPreLoadData.py  start.py  test2.ipynb  utils.py
src/deeplabv3/: dataloader.py  main.py  model.py
src/deeplabv3plus/: data.py  main.py  model.py
