[tool.poetry]
name = "image-segmentation"
version = "0.1.0"
description = "image segmenation with deep encoder-decoder networks"
authors = ["Max Andreas de Visser", "Casper Anton Poulsen", "Bence Zoltan Balazs"]
readme = "README.md"
packages = [{include = "image_segmentation"}]

# Base dependencies
[tool.poetry.dependencies]
python = "^3.10"
numpy = {extras = ["stubs"], version = "^1.24.2"}
pandas = "^2.0.0"
matplotlib = "^3.7.1"
ipykernel = "^6.22.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
pandas-stubs = "^2.0.0.230412"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
torchmetrics = "^0.11.4"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
pre-commit = "^3.2.2"
nbqa = "^1.7.0"
mypy = "^1.2.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
paramiko = "^3.1.0"

# Black Configuration
scp = "^0.14.5"
[tool.black]
line_length = 88

# Isort Configuration
[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 88
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
